<resources>
    <string name="app_name">Organizer</string>
    <string name="title_notes">Notes</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_note">Note</string>
    <string name="auth_error">Auth error, please try again</string>
    <string name="connection_error">Connection error. The app works offline</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username or email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="i_already_have_an_account"><u>I already have an account</u></string>
    <string name="you_must_enter_a_username">You must enter a username</string>
    <string name="you_must_enter_a_email">You must enter a email</string>
    <string name="you_must_enter_a_password">You must enter a password</string>
    <string name="you_must_repeat_a_password">You must repeat a password</string>
    <string name="the_passwords_must_match">The passwords must match</string>
    <string name="username_must_be_at_least_3_characters_long">
        Username must be at least 3 characters long
    </string>
    <string name="username_can_only_contain">
        Username can only contain letters, numbers and underscore signs
    </string>
    <string name="password_must_be_at_least_6_characters_long">
        Password must be at least 6 characters long
    </string>
    <string name="invalid_email_entered">Invalid email entered</string>
    <string name="user_with_this_username_or_email_already_exists">
        User with this name or email already exists
    </string>
    <string name="unknown_error_please_try_again_later">Unknown error, please try again later</string>
    <string name="action_logout">Logout</string>
    <string name="i_dont_have_an_account"><u>I don`t have an account</u></string>
    <string name="invalid_username_or_email_entered">Invalid username or email entered</string>
    <string name="incorrect_username_or_password">Incorrect username, email or password</string>
    <string name="note_title">Note title</string>
    <string name="note_content">Note content</string>
    <string name="add_button" translatable="false">Add button</string>
    <string name="title">Title</string>
    <string name="content">Content...</string>
    <string name="project">Project</string>
    <string name="task">Task</string>
    <string name="target_date">Target date</string>
    <string name="target_time">Target time</string>
    <string name="note_editing">Note editing</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="project_name">Project name</string>
</resources>