<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.slbrv.organizer.ui.note.NoteListFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/nav_notes_to_nav_note_action"
            app:destination="@id/nav_note"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.slbrv.organizer.ui.task.TaskListFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_note"
        android:name="com.slbrv.organizer.ui.note.NoteEditFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note_edit"/>
</navigation>