<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="64dp">

        <EditText
            android:id="@+id/sign_in_username_or_email_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_or_email"
            android:inputType="textPersonName"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_in_pwd_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_username_or_email_edit_view"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@+id/already_have_an_account_text_view" />

        <TextView
            android:id="@+id/already_have_an_account_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/i_already_have_an_account"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>